May the force be with you